adds grid image

--- a/states/grid/grid.html
+++ b/states/grid/grid.html
@@ -76,7 +76,9 @@
   grid-row: 3;
 }
 </pre>
-<br><br>
+
+<br>
+<img class="w50" src="./img/line-based.png" alt="linebased-grid"><br>
 <div class="brdr-b ctr w60">
   <br><h2 class="bold">Drying out Grid</h2>
   <h3>If your element only spans one track, the slash + num is superfluous.</h3>
