--- a/states/es6/es6.html
+++ b/states/es6/es6.html
@@ -81,7 +81,7 @@ There is much more to Object.assign();
 
 </div>
 </div>
-<div class="framed4"><h3 class="chtitle">Template Literals</h3>
+<div class="slate-skyblue-fr"><h3 class="chtitle">Template Literals</h3>
   <pre class="prettyprint w60">
 const italian = {
   name: "Italians",
@@ -186,7 +186,7 @@ Array destructuring:
 
 </div>
 <hr>
-<div class="framed4">
+<div class="slate-skyblue-fr">
 <h3 class="wh ctrtxt">Arrow Functions ("fat-arrow")</h3>
 The following works in ES5:
 <pre class="prettyprint w40">
