--- a/states/gsap/gsap.html
+++ b/states/gsap/gsap.html
@@ -9,7 +9,7 @@
   <h2 class="chtitle">Animating html boxes vs. svg boxes with GSAP</h2>
     <div class="fRight intrinsic-ratio-wrapper w40">
       <video  class="intrinsic-ratio-child" controls>
-        <source src="./img/gsapBoxes.mp4" type="video/mp4">
+        <source src="./img/gsapboxes.mp4" type="video/mp4">
       </video>
     </div>
 <h3 class="sand">A step-by-step guide with code</h3>
@@ -51,7 +51,7 @@ tl
 
 </div>
 <hr>
-<div class="framed4"><h3>A loader animation with GSAP</h3>
+<div class="slate-skyblue-fr"><h3>A loader animation with GSAP</h3>
   <div class="ctr intrinsic-ratio-wrapper w20">
     <video  class="intrinsic-ratio-child" width="314" height="220" controls>
       <source src="./img/loader.mov" type="video/mp4">
@@ -204,7 +204,7 @@ We can even cycle through multiple properties. Here, we'll do scale and x
 <pre class="dkbg ctrtxt w80">tl2.staggerFrom(button, 5, { <b class="ltgreen">cycle:{x:[-100, 500]</b>, <b class="ltblue">scale: [2, 0.5] </b>}, ease:Power4.easeOut}, {autoAlpha: 1, y:600}, 0.1);</pre>
 So, twice the size and half the size (is the style rules that they 'come from'). They then arrive at a uniform height and position.
 </div>
-<div class="framed1"><h3>Useful methods to control events in a timeline</h3>
+<div class="forest-red-fr"><h3>Useful methods to control events in a timeline</h3>
 In <a href="https://codepen.io/beau_dev/pen/dRYJjm?editors=0010">This Pen</a>, You'll find the following Fn calls placed inside various click events.
 
 
@@ -243,7 +243,7 @@ TimelineMax enables the repeat object in order to set the amount of repeats. (-1
 
 </div>
 <hr>
-<div class="framed1 dk-frame"><h3 class="chtitle pastY">GSAP Callbacks are very simple</h3>
+<div class="forest-red-fr dk-frame"><h3 class="chtitle pastY">GSAP Callbacks are very simple</h3>
 Inside of the tween's object place a key:value pair. Key is the Fn name, Value is the arg.
 <div class="col-2">
 Comma separated key:values are permissable as well.
