--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,23 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Wednesday June 14th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">I feel good. Lots of RL stuff to contend with. I think I'm getting to the nerdy point where I begin to stare at people in conversation, nod along politely while I'm thinking of a cleaner way to refactor stuff while maintaining readability.<br>
+  <br><span class="bold softred underline">Today:</span><br>
+  Thing I MUST do: set up sass in this project. It will make it much more managable as I iterate through the whole thing.<br />
+  Thing I Want to do: Continue with the first pass of the next section.<br>
+  Thing I'll do if I have time: Test it in codepen--just to make sure that it's workable as a show-case piece.</h3>
+  <br><h3>To do:</h3>
+  <ol class="todo">
+    <li>SASS in project: review notes and--along the way--enter them in this app</li>
+    <li>Get back to the larger "macro" grid of the painting</li>
+    <li>Push to git and then Heroku git</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
   <h2 class="date">Tuesday June 13th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Worked late through the night. Pushed lots and lots yesterday. Grid line-based positioning absolutely rocks. Cleaned up the jq view a bit--It looks less like a disaster.<br /><br />I don't want to bike-shed all day with styling this app. The grid project is demanding. There's a 3d aspect that is going to hit me. #techdebt. I never <em>truly, deeply</em> understood translate3d(); in a comprehensive way. It's time. Tech-debt collector is going to be on the phone.</h3>
@@ -25,11 +42,13 @@
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>PlaceholderForTasks</li>
+    <li>More work on grid painting project</li>
+    <li>Focus on semantic markup</li>
+    <li>Continue contributing to "Grid" view in this journal</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Renamed and reconfigured a cleaner grid for the painting. It's coming along well. <a href="https://github.com/Beauvelop/grid_painting" target="_blank">Here's the Repo</a></li>
   </ol>
   <hr />
   <h2 class="date">Monday June 12th, 2017</h2>
