--- a/states/node/node.html
+++ b/states/node/node.html
@@ -3,7 +3,7 @@
   <aside><span class="rot90">{{state}}</span></aside>
   <div class="node-entry entry">
 <pre>
-  <div class="framed1">
+  <div class="forest-red-fr">
 A session is something on the back end that is stored as an ID--associated to an object.
 A cookie is the mechanism by which we pass that ID back and forth.
 
