--- a/states/svg/svg.html
+++ b/states/svg/svg.html
@@ -31,7 +31,7 @@
 preserveAspectRatio=" "
 < linearGradient> element
 < ngAttr="{{<i class="y"> scope-property </i>}}"</div>
-<div class="framed1 w80"><h3 class="ltgreen">the <b><</b>g> element</h3>
+<div class="forest-red-fr w80"><h3 class="ltgreen">the <b><</b>g> element</h3>
   You can group shapes using the g element. The g element is a container for other shapes. If you apply style to a g element, that style will be applied to all its child elements. When you create SVG, it is very common to group some elements inside a g container.
   <br />
   <svg  class="box-border" width="400" height="200" xmlns="http://www.w3.org/2000/svg">
@@ -50,7 +50,7 @@ preserveAspectRatio=" "
   </pre>
 </div>
 
-<div class="framed1"><h3 class="ltgreen">the <b><</b>defs> element</h3>
+<div class="forest-red-fr"><h3 class="ltgreen">the <b><</b>defs> element</h3>
 can be used to define special graphical SVG elements such as gradients, filters or patterns. When you want to use a special SVG element, you first define it inside the defs element and later on, you can use it in your SVG. <span class="mango">Make sure you specify an id for your special element, so that you can use it later.</span>
 
 
@@ -68,7 +68,7 @@ can be used to define special graphical SVG elements such as gradients, filters 
 </pre>
 </div>
 
-<div class="framed4"><h3>Angularjs & SVG</h3>
+<div class="slate-skyblue-fr"><h3>Angularjs & SVG</h3>
    Since SVG has its own XML definition, it doesn’t understand AngularJS expressions. That means that if you will try to use SVG attributes with data binding expressions (curly brackets), you will get an error.<br><span class="med ivr"> The work around is to prefix all the dynamic attributes with ng-attr - and then set the binding expression.</span>
 <a href="https://docs.angularjs.org/guide/interpolation" target="_blank">angular explanation for ngAttr</a> (normalized as ng-attr=" ")
 </div>
@@ -100,7 +100,7 @@ Higher viewBox W and H numbers render in a quasi-higher res. --and give the effe
   ↘️ xMaxYMax -- right-bottom
 </div>
 
-<div class="w80 framed4 squat col-2 sm">Common elements
+<div class="w80 slate-skyblue-fr squat col-2 sm">Common elements
   <ul>
   <li>line</li>
   <li>text</li>
