--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,11 +20,12 @@
   -->
   <h2 class="date">Wednesday June 14th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
-  <h3 class="subtitle">I feel good. Lots of RL stuff to contend with. I think I'm getting to the nerdy point where I begin to stare at people in conversation, nod along politely while I'm thinking of a cleaner way to refactor stuff while maintaining readability.<br>
+  <h3 class="subtitle">I feel good. Lots of RL stuff to contend with. I think I'm getting to the nerdy point where I begin to stare at people in conversation, nod along politely while I'm thinking of a cleaner way to refactor stuff.<br>
   <br><span class="bold softred underline">Today:</span><br>
   Thing I MUST do: set up sass in this project. It will make it much more managable as I iterate through the whole thing.<br />
   Thing I Want to do: Continue with the first pass of the next section.<br>
-  Thing I'll do if I have time: Test it in codepen--just to make sure that it's workable as a show-case piece.</h3>
+  Thing I'll do if I have time: Test it in codepen--just to make sure that it's workable as a show-case piece.
+  *also* Think about composing a style-guide for this app and put it in a view <a href="https://www.yelp.com/styleguide#color" target="_blank">Here</a> is a really nice, simple example from YELP to view as a reference.</h3>
   <br><h3>To do:</h3>
   <ol class="todo">
     <li>SASS in project: review notes and--along the way--enter them in this app</li>
@@ -33,7 +34,8 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>refactor to sass is done!</li>
+    <li>several entries to Sass added to codeJournal --Very worthwhile & still more to learn and implement (I barely touched the surface last iteration). It's a much more fluid process, now.</li>
   </ol>
   <h2 class="date">Tuesday June 13th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
