--- a/states/home/home.html
+++ b/states/home/home.html
@@ -4,32 +4,28 @@
 <pre>
 <!-- pre for all -->
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">.this()</h1>
-<p class="dkgrey2">practical notes, code and advice distilled from myriad sources in web development. It is a "living-document" to which I contribute daily as a resource and reference to others.
+<h2>practical notes, code and advice</h2>
+<p>These pages are full of lessons with purpose. Code, advice & wisdom that I've collected over the past year distilled from myriad sources in web development.</p>
 </div>
-<br><br>
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">.attr()</h1>
-<p class="dkgrey2">attribution of code and recommendations to useful articles, presentations, lectures, books, etc. will continue to be made as I iterate over these pages regularly.
-<br>
-These are not comprehensive walkthroughs, but bits and pieces--that are continuously edited and groomed.</p>
+<h2>This is a "living-document"</h2>
+<p>These are not comprehensive walkthroughs, they are small lessons that are continuously edited, groomed and improved upon.
+<br />It's a reference, a motivator and a way to give something back
+to the community that has been such a help to me so much.<br>
+<em class="bold">CodeJournal</em> was created in order to reduce some of the pain points<br /> of learning and mastering difficult tech in web development.</p>
+<span class="sm chtitle dkgrey2">attribution of code and recommendations to useful articles, presentations, lectures, books, etc. will continue to be made as I iterate over these pages regularly.</span>
 </div>
-<br><br>
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">TL;DR</h1>
-<h5 class="dkgrey2">This is a fan-site for web developer/teachers. It's available here as a reference, a motivator and a way to give back something to the community that has been such a help to me in the past. <br /><br />If I am--at all--lucky enough to have helped just one person, then the months putting these pieces together will not have been misspent.</h5>
+<h2>This is a fan-site <em>of</em> developer-students <em>for</em> developer-students.</h2>
+<span class="sm softsand">If I am--at all--lucky enough to have helped just one person, then the months putting these pieces together will not have been misspent.</span>
 </div>
-
-
-
-
-
-
 </pre>
+<br><br>
 <footer class="grade-bg sm comfort"><ul><li><a target="_blank" href="https://github.com/Beauvelop">github</a></li>
   <li><a href="https://codepen.io/beau_dev/" target="_blank">codepen</a></li>
   <li><a target="_blank" href="https://twitter.com/beau_dev">twitter</a></li></ul>
-  <h6 class="chtitle sm dkorange">No claim of copyright (nor of expertise for that matter). --On the contrary, please use what you find here in your own study. Follow the exercises & the links provided! Be patient and painstaking. <br>@ me on <span class=""><a target="_blank" href="https://twitter.com/beau_dev">twitter</a> if you have a question.</span></h6>
+  <h6 class="chtitle sm dkorange">No claim of copyright (nor of expertise for that matter). <br>--On the contrary, please use what you find here in your own study. Follow the exercises & the links provided! Be patient, painstaking & love what you do! <br>@ me on <span class=""><a target="_blank" href="https://twitter.com/beau_dev">twitter</a> if you have a question.</span></h6>
 </footer>
-
-
 
 </div>
 <!-- home-entry end -->
