--- a/states/home/home.html
+++ b/states/home/home.html
@@ -24,7 +24,7 @@ to the community that has been such a help to me so much.<br>
 <footer class="grade-bg sm comfort"><ul><li><a target="_blank" href="https://github.com/Beauvelop">github</a></li>
   <li><a href="https://codepen.io/beau_dev/" target="_blank">codepen</a></li>
   <li><a target="_blank" href="https://twitter.com/beau_dev">twitter</a></li></ul>
-  <h6 class="chtitle sm dkorange">No claim of copyright (nor of expertise for that matter). <br>--On the contrary, please use what you find here in your own study. Follow the exercises & the links provided! Be patient, painstaking & love what you do! <br>@ me on <span class=""><a target="_blank" href="https://twitter.com/beau_dev">twitter</a> if you have a question.</span></h6>
+  <h6 class="ctr sm">No claim of copyright (nor of expertise 🤓). On the contrary, please use CodeJournal in your own study. Follow the exercises & the links provided! Be patient, painstaking & love what you do! <br>@ me on <span class=""><a target="_blank" href="https://twitter.com/beau_dev">twitter</a> if you have a question.</span></h6>
 </footer>
 
 </div>
