--- a/states/angular/angular.html
+++ b/states/angular/angular.html
@@ -614,7 +614,7 @@ One more thing about the example I. above:
 
 <h3 class="dkred">The solution: </h3> create a service (as a factory) that returns smth that references that prop on the object inside "{ {} }"
 Then, feed that service to each controller
-<img class="w50 shadn" src="./img/sharingscope1.png" alt="shared scope">
+<img class="w50 shadn" src="./img/sharingscope.png" alt="shared scope">
 
 </div>
 <pre class="prettyprint w60">
