--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -345,7 +345,7 @@ This has not <span class="y">one</span>, but <span class="orange">two</span> arg
     return a;
   }, {});
   console.log(result);// Let's define "a" as an object and feed b as keys then values.
-  <img src="./img/reduceobject1.png" class="w40 ans right" alt="reduce()"></pre> Let's try initial argument as a string!
+  <img src="./img/reduceobj.png" class="w40 ans right" alt="reduce()"></pre> Let's try initial argument as a string!
     <pre class="prettyprint">
 var result = array.reduce(function(a, b){
   a = a + " " + b;
@@ -399,7 +399,7 @@ var result = jogRec2016.reduce(function(prev, next, index) {
     prev[index]= next + " miles";
   }
   return prev; //must return the Object
-},{}) <img src="./img/jobobject1.png" class="w10" alt="jogObject">
+},{}) <img src="./img/jogobject.png" class="w10" alt="jogObject">
 </pre> Return an object with repeated words:
     <pre class="prettyprint w60">var sentence = "He's a good person doing a good thing for a good person.";
 var sentArr = sentence.split(' ');</pre> Let's first make an object.
@@ -650,7 +650,7 @@ var names = people.map((foo) => foo.name);
     coffee.filter(coffee) {
       return result === liquid;
     } // it's only going to spit out what we want</pre>
-    <img class="w40 shadn ctr" src="./img/nodeFilter.png" alt="nodeFIlter">
+    <img class="w40 shadn ctr" src="./img/nodefilter.png" alt="nodefilter">
     <h3 class="ivr">Here we only get anything if it equals what was queried.</h3>
 
   </div>
