--- a/states/gsap/gsap.html
+++ b/states/gsap/gsap.html
@@ -9,7 +9,7 @@
   <h2 class="chtitle">Animating html boxes vs. svg boxes with GSAP</h2>
     <div class="fRight intrinsic-ratio-wrapper w40">
       <video  class="intrinsic-ratio-child" controls>
-        <source src="./img/gsapboxes.mp4" type="video/mp4">
+        <source src="./img/boxes.mp4" type="video/mp4">
       </video>
     </div>
 <h3 class="sand">A step-by-step guide with code</h3>
