--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -9,8 +9,10 @@
 
     <br>
     <h3>To do:</h3>
-    <ol class="todo">
+    <ol class="todo"><span class="ltred">T-minus Xdays until launch.</span>
       <li>PlaceholderForTasks</li>
+      <li></li>
+      <li><span class="ltred">Potential Blocks:</span></li>
     </ol><br>
     <h3>Done: </h3>
     <ol class="done">
@@ -18,6 +20,58 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Saturday June 17th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Great progress yesterday. The difference in shadows cast by css from those cast by SVG are something I need to look into. I need to choreograph(?) or plan out the animation and syncronizing with audio events.<br /><br /> I need to start thinking about an MVP and finish ahead of sched. Then, iterate over and over.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo"><span class="ltred">T-minus 20days until launch.</span>
+    <li>PlaceholderForTasks</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+  <h2 class="date">Friday June 16th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Question: Once doing clipping on a css shape, are you still able to use borders? I assume so, but will test it. I'm still concerned about using too much svg for this project (gutter-drains, etc.). But I'm very satisfied with the progress. <span class="ltred">T-minus 21days until launch.</span> </h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Test what I have in codepen</li>
+    <li>Brick house section. Randomize roof shingles placement</li>
+    <li>Set-up subgrid for brick placement: red background grey/white cement lines</li>
+    <li>Will begin to use Firefox's grid inspector. GREAT video on this <a href="https://youtu.be/16enLRDbOyY?t=201" target="_blank">here!</a> c/o Jen Simmons</li>
+    <li><span class="ltred">Potential Blocks:</span> Worried that I'm somehow not using grid properly...that there's more in it that would be more efficient approach to solving this.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>codepen √ and centered</li>
+    <li>Um... No on the boorders of a clipped portion of a clipped shape. I did discover a nice thing called "Clippy" that helps produce relevant code for clipped shapes.</li>
+    <li>Did some wizardry last night. FF has some z-index logic that differs from Chrome. Chrome, apparently, <a href="https://stackoverflow.com/questions/31646746/z-index-behaviour-is-different-in-chrome-to-firefox" target="_blank">is in contradiction with w3c spec</a></li>
+  </ol>
+  <hr />
+  <h2 class="date">Thursday June 15th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Last night progress was slow but successful. Refactoring will pay off. I should be thankful for some things. Fewer hours of sleep is an anti-pattern. --But then, so is gratuitous self-recrimination. #shutupAndStartCoding.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Having semantic names for columns and rows, this should continue smoothly. I have the "Peach House" and "White House" for a first complete pass over the entire page.</li>
+    <li>If I have time, I'll do temporary icons to rework the nav menu directive in this codejournal</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>I'm at step5 <img class="w10" src="./img/step5.jpg" alt=""> of the Grid Painting</li>
+    <li>Lots of subdividing sass files into bits I can manage. It was painstaking, but will reap dividends when I come to animate it all.</li>
+  </ol>
+  <hr />
   <h2 class="date">Wednesday June 14th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">I feel good. Lots of RL stuff to contend with. I think I'm getting to the nerdy point where I begin to stare at people in conversation, nod along politely while I'm thinking of a cleaner way to refactor stuff.<br>
