--- a/states/jquery/jquery.html
+++ b/states/jquery/jquery.html
@@ -59,7 +59,7 @@ btn2.on('click', function() {
     <div class="simple-frame2">
       <h4>Selection</h4>
       <h4 class="ctr med">This code grabs siblings with a certain word...Then, completely replaces the elements.</h4>
-      <section class="col-2  w50 ctr"><pre class="w20"><img class="neighbors-item w20" src="./img/sadHappy.png" alt="sad happy jquery"></pre>
+      <section class="col-2  w50 ctr"><pre class="w20"><img class="neighbors-item w20" src="./img/sadhappy.png" alt="sad happy jquery"></pre>
         <pre class="w20"><img class="neighbors-item w20" src="./img/happy.png" alt="happy"></pre></section>
       <pre class="prettyprint w50 ctr">
 var btn = $('button');
