--- a/directive_templates/navdirective.html
+++ b/directive_templates/navdirective.html
@@ -3,18 +3,18 @@
 <nav class="navbar">
   <ul>
     <li class="navlink-container"><a ui-sref="home">HOME</a></li>
-    <li class="navlink-container"><a ui-sref="journal">JOURNAL</a></li>
-    <li class="navlink-container"><a ui-sref="jquery">JQUERY</a></li>
-    <li class="navlink-container"><a ui-sref="javascript">JAVASCRIPT</a></li>
-    <li class="navlink-container"><a ui-sref="sass">CSS-SASS</a></li>
-    <li class="navlink-container"><a ui-sref="angular">ANGULAR</a></li>
-    <li class="navlink-container"><a ui-sref="node">NODE</a></li>
-    <li class="navlink-container"><a ui-sref="sql">SQL</a></li>
-    <li class="navlink-container"><a ui-sref="svg">SVG</a></li>
-    <li class="navlink-container"><a ui-sref="es6">ES6</a></li>
-    <li class="navlink-container"><a ui-sref="misc">MISC</a></li>
-    <li class="navlink-container"><a ui-sref="gsap">GSAP</a></li>
+    <li class="navlink-container"><a ui-sref="journal">DAILY_STANDUP</a></li>
     <li class="navlink-container"><a ui-sref="grid">GRID</a></li>
+    <li class="navlink-container"><a ui-sref="sass">CSS-SASS</a></li>
+    <li class="navlink-container"><a ui-sref="svg">SVG</a></li>
+    <li class="navlink-container"><a ui-sref="jquery">JQUERY</a></li>
+    <li class="navlink-container"><a ui-sref="sql">SQL</a></li>
+    <li class="navlink-container"><a ui-sref="javascript">JAVASCRIPT</a></li>
+    <li class="navlink-container"><a ui-sref="gsap">GSAP</a></li>
+    <li class="navlink-container"><a ui-sref="angular">ANGULAR</a></li>
+    <li class="navlink-container"><a ui-sref="es6">ES6</a></li>
+    <li class="navlink-container"><a ui-sref="node">NODE</a></li>
+    <li class="navlink-container"><a ui-sref="misc">MISC</a></li>
 
   </ul>
 </nav>
