--- a/states/misc/misc.html
+++ b/states/misc/misc.html
@@ -86,7 +86,7 @@ Try it!
 <span class="navy">The execution context that is created by secondUpdate funk
 makes 'this' point to the Global Object!
 
-<img src="./img/thisGlobal.png" class="w10" alt="">
+<img src="./img/thisglobal.png" class="w10" alt="">
 Now, there is uncertainty about which object 'this' is pointing to.
 </span>
 </div>
