--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -27,9 +27,10 @@
   <br>
   <h3>To do:</h3>
   <ol class="todo"><span class="ltred">T-minus 20days until launch.</span>
-    <li>PlaceholderForTasks</li>
+    <li>Doors, rectangles, etc. --simple additions to be turned into subgrids.</li>
+    <li>Perhaps the roof patterns on the peach house (column 2)</li>
     <li></li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li><span class="ltred">Potential Blocks:</span> mostly about 'working smarter' and making good decisions so that refactoring (changing px values to fr values?) & animation (when we get to that) becomes more doable. But today, it's simply about diving in & doing.</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
