img rename and cleanup

--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -885,10 +885,9 @@ This is called capturing the event in <em class="dkorange underline">the Bubblin
     <br>
     < div <span class="dkorange">id="myDiv"></span>
       < div>
-        < a <span class="dkorange">id="coralLink"</span> href="https://www.google.com">LINK
-          < /a>
-            < /div>
-              < /div>
+        < a <span class="dkorange">id="coralLink"</span> href="https://www.google.com">LINK< /a>
+      < /div>
+    < /div>
   </div><br><pre class="prettyprint">
     var myDiv = document.getElementById('myDiv');
     var coralLink = document.getElementById('coralLink');
