--- a/states/home/home.html
+++ b/states/home/home.html
@@ -9,15 +9,15 @@
 </div>
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">.attr()</h1>
 <h2>This is a "living-document"</h2>
-<p>These are not comprehensive walkthroughs, they are small lessons that are continuously edited, groomed and improved upon.
-<br />It's a reference, a motivator and a way to give something back
-to the community that has been such a help to me so much.<br>
+<p>These are not comprehensive walkthroughs. CodeJournal is a collection of lessons that are being edited and improved upon.
+<br />These pages are a reference, a motivator and a small contribution to the community that
+that has been such a help to me in the past years.<br>
 <em class="bold">CodeJournal</em> was created in order to reduce some of the pain points<br /> of learning and mastering difficult tech in web development.</p>
 <span class="sm chtitle dkgrey2">attribution of code and recommendations to useful articles, presentations, lectures, books, etc. will continue to be made as I iterate over these pages regularly.</span>
 </div>
 <div class="right debossed-dk-frame thin txt-right"><h1 class="right dkred3">TL;DR</h1>
 <h2>This is a fan-site <em>of</em> developer-students <em>for</em> developer-students.</h2>
-<span class="sm softsand">If I am--at all--lucky enough to have helped just one person, then the months putting these pieces together will not have been misspent.</span>
+<span class="sm softsand">If I am--at all--lucky enough to have helped just one person, then the months putting these lessons together will not have been misspent.</span>
 </div>
 </pre>
 <br><br>
