--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -650,7 +650,7 @@ var names = people.map((foo) => foo.name);
     coffee.filter(coffee) {
       return result === liquid;
     } // it's only going to spit out what we want</pre>
-    <img class="w40 shadn ctr" src="./img/nodefilter.png" alt="nodefilter">
+    <img class="w40 shadn ctr" src="./img/nodefilter.jpg" alt="nodefilter">
     <h3 class="ivr">Here we only get anything if it equals what was queried.</h3>
 
   </div>
