--- a/states/es6/es6.html
+++ b/states/es6/es6.html
@@ -130,7 +130,7 @@ for of is built for arrays
   for (prop of carArr) {
     console.log(prop);
   }
-  <img class="w20" src="./img/forof.png" alt="for of loop">
+  <img class="w20" src="./img/forof.jpg" alt="for of loop">
 </pre>
 
 </div>
